01-haproxy-deployment-v4.yaml
####### HAproxy ConfigMap ##########
---
apiVersion: v1
kind: Service
metadata:
  name: ceph-rgw-01
  namespace: test-haproxy-01
  labels:
    app: ceph-rgw-01
spec:
  selector:
    app: ceph-rgw-01
  #type: ClusterIP
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: 80
    - name: stats
      port: 8404
      targetPort: 8404
    - name: metrics
      port: 9101
      targetPort: 9101

################### HAproxy Deployment ###################################
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ceph-rgw-01
  namespace: test-haproxy-01
  labels:
    app: ceph-rgw-01
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ceph-rgw-01
  template:
    metadata:
      labels:
        app: ceph-rgw-01
      annotations:
        reloader.stakater.com/match: "true"
        #kubernetes.io/ingress-bandwidth: "5M"  # limit ingress 5 Mbps , หน่วย: M = Mbps, K = Kbps 
        #kubernetes.io/egress-bandwidth: "5M"   # limit egress 5 Mbps , หน่วย: M = Mbps, K = Kbps
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - ceph-rgw-01
                topologyKey: "kubernetes.io/hostname"
      containers:
        - name: haproxy
          image: haproxy:2.8
          args:
            - "-f"
            - "/usr/local/etc/haproxy/haproxy.cfg"
          ports:
            - name: http
              containerPort: 80
            - name: stats
              containerPort: 8404
          volumeMounts:
            - name: haproxy-config
              mountPath: /usr/local/etc/haproxy/haproxy.cfg
              subPath: haproxy.cfg
      volumes:
        - name: haproxy-config
          configMap:
            name: ceph-rgw-01-config

################# ScrapeCOnfig ####################
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ceph-rgw-01
  namespace: test-haproxy-01  
spec:
  parentRefs:
    - name: gateway-01
      namespace: envoy-gateway-system
  hostnames:
    - "ceph-rgw-01.s3gw1.olsdemo.com"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: ceph-rgw-01
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
