01-haproxy-deployment.yaml
####### HAproxy ConfigMap ##########
---
apiVersion: v1
kind: Service
metadata:
  name: test-haproxy-01
  namespace: test-haproxy-01
  labels:
    app: test-haproxy-01
spec:
  selector:
    app: test-haproxy-01
  #type: ClusterIP
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: 80
    - name: stats
      port: 8404
      targetPort: 8404
    - name: metrics
      port: 9101
      targetPort: 9101

################### HAproxy Deployment ###################################
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-haproxy-01
  namespace: test-haproxy-01
  labels:
    app: test-haproxy-01
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: test-haproxy-01
  template:
    metadata:
      labels:
        app: test-haproxy-01
      annotations:
        reloader.stakater.com/match: "true"
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - test-haproxy-01
                topologyKey: "kubernetes.io/hostname"
      containers:
        - name: haproxy
          image: haproxy:2.8
          args:
            - "-f"
            - "/usr/local/etc/haproxy/haproxy.cfg"
          ports:
            - name: http
              containerPort: 80
            - name: stats
              containerPort: 8404
          volumeMounts:
            - name: haproxy-config
              mountPath: /usr/local/etc/haproxy/haproxy.cfg
              subPath: haproxy.cfg
         #readinessProbe:
         #   httpGet:
         #     path: /healthz
         #     port: 8404
         #   initialDelaySeconds: 2
         #   periodSeconds: 5
         # livenessProbe:
         #   httpGet:
         #     path: /healthz
         #     port: 8404
         #   initialDelaySeconds: 5
         #   periodSeconds: 10
      volumes:
        - name: haproxy-config
          configMap:
            name: test-haproxy-01-config

################# Prometheus Scrape by ServiceMonitor #########################
#---
#apiVersion: monitoring.coreos.com/v1
#kind: ServiceMonitor
#metadata:
#  labels:
#    release: prometheus
#  name: haproxy-monitor-01
#  namespace: monitoring # ห้ามเปลี่ยน
#spec:
#  selector:
#    matchLabels:
#      app: test-haproxy-01
#  namespaceSelector:
#    matchNames:
#      - test-haproxy-01
#  endpoints:
#    - port: metrics # port name จาก svc 
#      path: / # haproxy exporter not use /metrics path
#      interval: 10s  
#
################# ScrapeCOnfig ####################
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: test-haproxy-01
  namespace: test-haproxy-01  
spec:
  parentRefs:
    - name: gateway-01
      namespace: envoy-gateway-system
  hostnames:
    - "test-haproxy-01.s3gw1.olsdemo.com"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: test-haproxy-01 
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
